    + Thanks to Pascal Dupuis for the original patch
    + Thanks to this change, the octave3.0-headers package do not depend
      gcc-3.4 anymore (closes: #435275)
    + The F77_FUNC_ macro in config.h does have the double underscore
      that appeared in version 2.9.12-2+b3 of the octave2.9-headers
      package (closes: #434415)

  [ Thomas Weber ]
  * debian/compat: switch to level 6
  * debian/in/control:
    + depend on debhelper >= 6
    + Don't depend on a specific g++ version (closes: #463302).
  * change slice term for 3.0 from 2.9:
    + debian/in/PACKAGE.conf
    + debian/in/PACKAGE-emacsen.dirs
    + debian/in/PACKAGE.dirs

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 06 Feb 2008 08:41:29 +0100

octave2.1 (1:2.1.73-16) unstable; urgency=low

  * Synched with octave3.0; in particular, do not build-conflict with
    atlas3-base-dev

 -- Rafael Laboissiere <rafael@debian.org>  Sun, 23 Dec 2007 22:53:52 +0100

octave3.0 (3.0.0-1) unstable; urgency=low

  The "Seasons Greetings" release

  * New upstream release.  A big thanks to John W. Eaton and all the
    Octave development team for this most awaited release.

  * debian/in/control, debian/rules: Replaced most of the references to
    octave2.9 by octave3.0.  Made all octave3.0* packages
    provide/replace/conflict with the respective octave2.9* packages.
  * debian/patches/02_prelease_warning.dpatch: Dropped patch, since this
    is the real 3.0 release
  * debian/in/control: Dropped the build-conflict with atlas3-base-dev.
    This will make the autobuilders happy.
  * debian/in/control: Dropped the empty octave package.  This will allow
    releasing octave3.0 without an epoch in its version number.  We will
    reintroduce this package later, if necessary (anyway, octave3.0
    provides octave).

 -- Rafael Laboissiere <rafael@debian.org>  Sun, 23 Dec 2007 16:04:15 +0100

octave2.1 (1:2.1.73-15) unstable; urgency=low

  [ Rafael Laboissiere ]