@@ -61,9 +61,9 @@ texifiles	:= doc/interpreter/octave.texi		\
 #c_compiler	= /usr/bin/gcc-3.3
 #cxx_compiler	= /usr/bin/g++-3.3
 #f77_compiler	= /usr/bin/g77-3.3
-c_compiler	= /usr/bin/gcc
-cxx_compiler	= /usr/bin/g++
-f77_compiler	= /usr/bin/gfortran
+c_compiler	= gcc
+cxx_compiler	= g++
+f77_compiler	= gfortran
 fc_flag		=
 fc_libs		=
 compilerflags	= -O2
