@@ -19,6 +19,8 @@ octave3.0 (1:3.0.0-2) UNRELEASED; urgency=low
     + The F77_FUNC_ macro in config.h does have the double underscore
       that appeared in version 2.9.12-2+b3 of the octave2.9-headers
       package (closes: #434415)
+  * debian/rules: Dropped path in compiler variables, such that the
+    package can be built using gcc-snapshot
 
   [ Thomas Weber ]
   * debian/compat: switch to level 6
